force-app/main/default/objects/Accounting_Notes__c/Accounting_Notes__c.object-meta.xml
<CustomObject>
    <label>Accounting Notes</label>
    <nameField>
        <displayFormat>NOTE-{0000}</displayFormat>
        <label>Accounting Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>