force-app/main/default/objects/Accounting_Notes__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounting Notes</relationshipLabel>
    <relationshipName>Accounting_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>