force-app/main/default/objects/Accounting_Notes__c/fields/Account_UEN__c.field-meta.xml
<CustomField>
    <fullName>Account_UEN__c</fullName>
    <formula>Account__r.UEN_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account UEN</label>
    <type>Text</type>
</CustomField>