force-app/main/default/objects/Accounting_Notes__c/fields/Advance_No__c.field-meta.xml
<CustomField>
    <fullName>Advance_No__c</fullName>
    <label>Advance No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>