force-app/main/default/objects/Accounting_Notes__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>Deduction__c.Amount__c</summarizedField>
    <summaryForeignKey>Deduction__c.Accounting_Notes__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>