force-app/main/default/objects/Accounting_Notes__c/fields/Approver1__c.field-meta.xml
<CustomField>
    <fullName>Approver1__c</fullName>
    <label>Approver 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>