force-app/main/default/objects/Accounting_Notes__c/fields/Approver1_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approver1_Comment__c</fullName>
    <label>Approver 1 Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>