force-app/main/default/objects/Accounting_Notes__c/fields/Approver1_Date__c.field-meta.xml
<CustomField>
    <fullName>Approver1_Date__c</fullName>
    <label>Approver 1 Date</label>
    <type>DateTime</type>
</CustomField>