force-app/main/default/objects/Accounting_Notes__c/fields/Approver1_Role__c.field-meta.xml
<CustomField>
    <fullName>Approver1_Role__c</fullName>
    <label>Approver 1 Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>