force-app/main/default/objects/Accounting_Notes__c/fields/Approver2__c.field-meta.xml
<CustomField>
    <fullName>Approver2__c</fullName>
    <label>Approver 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>