force-app/main/default/objects/Accounting_Notes__c/fields/Approver2_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approver2_Comment__c</fullName>
    <label>Approver 2 Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>