force-app/main/default/objects/Accounting_Notes__c/fields/Approver2_Date__c.field-meta.xml
<CustomField>
    <fullName>Approver2_Date__c</fullName>
    <label>Approver 2 Date</label>
    <type>DateTime</type>
</CustomField>