force-app/main/default/objects/Accounting_Notes__c/fields/Approver2_Status__c.field-meta.xml
<CustomField>
    <fullName>Approver2_Status__c</fullName>
    <label>Approver 2 Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>