force-app/main/default/objects/Accounting_Notes__c/fields/Approver3__c.field-meta.xml
<CustomField>
    <fullName>Approver3__c</fullName>
    <label>Approver 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>