force-app/main/default/objects/Accounting_Notes__c/fields/Approver3_Date__c.field-meta.xml
<CustomField>
    <fullName>Approver3_Date__c</fullName>
    <label>Approver 3 Date</label>
    <type>DateTime</type>
</CustomField>