force-app/main/default/objects/Accounting_Notes__c/fields/Approver3_Role__c.field-meta.xml
<CustomField>
    <fullName>Approver3_Role__c</fullName>
    <label>Approver 3 Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>