force-app/main/default/objects/Accounting_Notes__c/fields/Bad_Debt__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bad Debt?</label>
    <type>Checkbox</type>
</CustomField>