force-app/main/default/objects/Accounting_Notes__c/fields/CFS_Approvers_Email__c.field-meta.xml
<CustomField>
    <fullName>CFS_Approvers_Email__c</fullName>
    <defaultValue>&quot;simdigital_noreply_yop@yopmail.com&quot;</defaultValue>
    <description>MVP1.0 SIM PD CFS Approvers Group Email Address</description>
    <inlineHelpText>SIM PD CFS Approvers Group Email Address</inlineHelpText>
    <label>CFS Approvers Email</label>
    <type>Email</type>
</CustomField>