force-app/main/default/objects/Accounting_Notes__c/fields/Course_Reg_Course_Title__c.field-meta.xml
<CustomField>
    <fullName>Course_Reg_Course_Title__c</fullName>
    <formula>Course_Registration__r.Course_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Reg Course Title</label>
    <type>Text</type>
</CustomField>