force-app/main/default/objects/Accounting_Notes__c/fields/Course_Reg_Department__c.field-meta.xml
<CustomField>
    <fullName>Course_Reg_Department__c</fullName>
    <formula>Text(Course_Registration__r.Course_Run_Id__r.Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Reg Department</label>
    <type>Text</type>
</CustomField>