force-app/main/default/objects/Accounting_Notes__c/fields/Course_Reg_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Reg_End_Date__c</fullName>
    <formula>LPad(Text(Day(Course_Registration__r.Course_Run_Id__r.End_Date__c )),2,&apos;0&apos;) &amp; &quot;/&quot; &amp;
LPad(Text(Month(Course_Registration__r.Course_Run_Id__r.End_Date__c )),2,&apos;0&apos;) &amp; &quot;/&quot; &amp;
Text(Year(Course_Registration__r.Course_Run_Id__r.End_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Reg End Date</label>
    <type>Text</type>
</CustomField>