force-app/main/default/objects/Accounting_Notes__c/fields/Course_Run_Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Run_Participant_Name__c</fullName>
    <formula>Course_Registration__r.First_Name__c &amp; &quot; &quot; &amp; Course_Registration__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Run Participant Name</label>
    <type>Text</type>
</CustomField>