force-app/main/default/objects/Accounting_Notes__c/fields/Debit_Note__c.field-meta.xml
<CustomField>
    <fullName>Debit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debit Note</label>
    <referenceTo>Accounting_Notes__c</referenceTo>
    <relationshipLabel>Accounting Notes</relationshipLabel>
    <relationshipName>Debit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>