force-app/main/default/objects/Accounting_Notes__c/fields/Debit_Note_for_Advances__c.field-meta.xml
<CustomField>
    <fullName>Debit_Note_for_Advances__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the flow to block entry</description>
    <label>Debit Note for Advances</label>
    <type>Checkbox</type>
</CustomField>