force-app/main/default/objects/Accounting_Notes__c/fields/Excess_Flag__c.field-meta.xml
<CustomField>
    <fullName>Excess_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this Debit Note being generated due to the excess amount?</inlineHelpText>
    <label>Excess Flag</label>
    <type>Checkbox</type>
</CustomField>