force-app/main/default/objects/Accounting_Notes__c/fields/Finance_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Finance_Remarks__c</fullName>
    <label>Finance Remarks</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>