force-app/main/default/objects/Accounting_Notes__c/fields/Finance_User__c.field-meta.xml
<CustomField>
    <fullName>Finance_User__c</fullName>
    <label>Finance User</label>
    <length>200</length>
    <type>Text</type>
</CustomField>