force-app/main/default/objects/Accounting_Notes__c/fields/GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount__c</fullName>
    <label>GST Amount</label>
    <summarizedField>Deduction__c.GST_Amount__c</summarizedField>
    <summaryForeignKey>Deduction__c.Accounting_Notes__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>