force-app/main/default/objects/Accounting_Notes__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Accounting Notes</relationshipLabel>
    <relationshipName>Accounting_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>