force-app/main/default/objects/Accounting_Notes__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <description>(MVP 1.0) - Used for Platform Event publishing</description>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CN</fullName>
                <label>Credit Note</label>
            </value>
            <value>
                <fullName>DN</fullName>
                <label>Debit Note</label>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>