force-app/main/default/objects/Accounting_Notes__c/fields/Payee_Account__c.field-meta.xml
<CustomField>
    <fullName>Payee_Account__c</fullName>
    <label>Payee Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>