force-app/main/default/objects/Accounting_Notes__c/fields/Payee_Bank_GIRO_Code__c.field-meta.xml
<CustomField>
    <fullName>Payee_Bank_GIRO_Code__c</fullName>
    <label>Payee Bank GIRO Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>