force-app/main/default/objects/Accounting_Notes__c/fields/Payee_Branch__c.field-meta.xml
<CustomField>
    <fullName>Payee_Branch__c</fullName>
    <label>Payee Branch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>