force-app/main/default/objects/Accounting_Notes__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2020-10-31</fullName>
            </value>
            <value>
                <fullName>2020-11-15</fullName>
            </value>
            <value>
                <fullName>2020-12-02</fullName>
            </value>
            <value>
                <fullName>2021-01-15</fullName>
            </value>
            <value>
                <fullName>2021-02-10</fullName>
            </value>
            <value>
                <fullName>2021-02-22</fullName>
            </value>
            <value>
                <fullName>2021-03-10</fullName>
            </value>
            <value>
                <fullName>2021-03-22</fullName>
            </value>
            <value>
                <fullName>2021-04-12</fullName>
            </value>
            <value>
                <fullName>2021-04-22</fullName>
            </value>
            <value>
                <fullName>2021-05-10</fullName>
            </value>
            <value>
                <fullName>2021-05-24</fullName>
            </value>
            <value>
                <fullName>2021-06-10</fullName>
            </value>
            <value>
                <fullName>2021-06-22</fullName>
            </value>
            <value>
                <fullName>2021-07-12</fullName>
            </value>
            <value>
                <fullName>2021-07-22</fullName>
            </value>
            <value>
                <fullName>2021-08-10</fullName>
            </value>
            <value>
                <fullName>2021-08-23</fullName>
            </value>
            <value>
                <fullName>2021-09-10</fullName>
            </value>
            <value>
                <fullName>2021-09-22</fullName>
            </value>
            <value>
                <fullName>2021-10-11</fullName>
            </value>
            <value>
                <fullName>2021-10-22</fullName>
            </value>
            <value>
                <fullName>2021-11-10</fullName>
            </value>
            <value>
                <fullName>2021-11-22</fullName>
            </value>
            <value>
                <fullName>2021-12-17</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>