force-app/main/default/objects/Accounting_Notes__c/fields/Payment_Mode_Text__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode_Text__c</fullName>
    <label>Payment Mode Text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>