force-app/main/default/objects/Accounting_Notes__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NORMAL</fullName>
                <default>true</default>
                <label>NORMAL</label>
            </value>
            <value>
                <fullName>URGENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>