force-app/main/default/objects/Accounting_Notes__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Accounting Notes</relationshipLabel>
    <relationshipName>Accounting_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>