force-app/main/default/objects/Accounting_Notes__c/fields/Reference_Case__c.field-meta.xml
<CustomField>
    <fullName>Reference_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MVP1.0 Select a Case where the Learner has requested for Deferment, Withdrawal OR Refund. 
Alternatively if you have an email communication upload it as an attachment.</description>
    <inlineHelpText>Select a Case where the Learner has requested for Deferment, Withdrawal OR Refund. 
Alternatively if you have an email communication upload it as an attachment.</inlineHelpText>
    <label>Reference Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Case.AccountId</valueField>
        </filterItems>
        <infoMessage>Select a Case where the Learner has requested for Deferment, Withdrawal OR Refund. 
Alternatively if you have an email communication upload it as an attachment.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Accounting Notes</relationshipLabel>
    <relationshipName>Accounting_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>