force-app/main/default/objects/Accounting_Notes__c/fields/Related_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Related_Line_Items__c</fullName>
    <description>No of deductions made to this Debit Note/Refund</description>
    <label>Related Line Items</label>
    <summaryForeignKey>Deduction__c.Accounting_Notes__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>