force-app/main/default/objects/Accounting_Notes__c/fields/Remark_Type__c.field-meta.xml
<CustomField>
    <fullName>Remark_Type__c</fullName>
    <label>Remark Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCN001</fullName>
                <label>WRONG BILLING</label>
            </value>
            <value>
                <fullName>NCC002</fullName>
                <label>DEFERMENT</label>
            </value>
            <value>
                <fullName>CCN002</fullName>
                <label>WRONG INVOICE DESCRIPTION</label>
            </value>
            <value>
                <fullName>NCC003</fullName>
                <label>ADVANCE NOT OFFSET</label>
            </value>
            <value>
                <fullName>NCC001</fullName>
                <label>WITHDRAWAL</label>
            </value>
            <value>
                <fullName>NCC004</fullName>
                <label>OTHERS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>