force-app/main/default/objects/Accounting_Notes__c/fields/Request_No__c.field-meta.xml
<CustomField>
    <fullName>Request_No__c</fullName>
    <externalId>true</externalId>
    <label>Request No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>