force-app/main/default/objects/Accounting_Notes__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <label>Submitter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>