force-app/main/default/objects/Accounting_Notes__c/fields/Submitter_Comment__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Comment__c</fullName>
    <label>Submitter Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>