force-app/main/default/objects/Accounting_Notes__c/fields/Submitter_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Date__c</fullName>
    <label>Submitter Date</label>
    <type>DateTime</type>
</CustomField>