force-app/main/default/objects/Accounting_Notes__c/fields/Submitter_Role__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Role__c</fullName>
    <label>Submitter Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>