force-app/main/default/objects/Accounting_Notes__c/fields/Submitter_Status__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Status__c</fullName>
    <label>Submitter Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>