force-app/main/default/objects/Accounting_Notes__c/fields/System_Id__c.field-meta.xml
<CustomField>
    <fullName>System_Id__c</fullName>
    <formula>IF(ISBLANK(Receipt__c),
IF(ISBLANK(Invoice__c), &quot;SDP&quot;, Invoice__r.System_Id__c),
Receipt__r.System_Id__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Id</label>
    <type>Text</type>
</CustomField>