force-app/main/default/objects/Accounting_Notes__c/recordTypes/Credit_Note.recordType-meta.xml
<RecordType>
    <fullName>Credit_Note</fullName>
    <active>true</active>
    <description>(MVP 1.0) - This indicates that this note is of a &quot;Credit Note&quot; type</description>
    <label>Credit Note</label>
</RecordType>