force-app/main/default/objects/Accounting_Notes__c/recordTypes/Debit_Note.recordType-meta.xml
<RecordType>
    <fullName>Debit_Note</fullName>
    <active>true</active>
    <description>(MVP 1.0) - This indicates that this note is of a &quot;Debit Note&quot; type</description>
    <label>Debit Note</label>
</RecordType>