force-app/main/default/objects/Accounting_Notes__c/recordTypes/Refund.recordType-meta.xml
<RecordType>
    <fullName>Refund</fullName>
    <active>true</active>
    <description>(MVP 1.0) - This indicates that this note is of a &quot;Refund&quot; type</description>
    <label>Refund</label>
</RecordType>