force-app/main/default/objects/Accounting_Notes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Submitter_Date__c</columns>
    <columns>Remark_Type__c</columns>
    <columns>Request_No__c</columns>
    <columns>Internal_Approval_Status__c</columns>
    <columns>Reference_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>