force-app/main/default/objects/Accounting_Notes__c/listViews/Director_Approvers_Accounting_Notes.listView-meta.xml
<ListView>
    <fullName>Director_Approvers_Accounting_Notes</fullName>
    <filterScope>Queue</filterScope>
    <label>Director Approvers</label>
    <queue>Director_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>