force-app/main/default/objects/Accounting_Notes__c/listViews/Executive_Approvers_Accounting_Notes.listView-meta.xml
<ListView>
    <fullName>Executive_Approvers_Accounting_Notes</fullName>
    <filterScope>Queue</filterScope>
    <label>Executive Approvers</label>
    <queue>Executive_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>