force-app/main/default/objects/Accounting_Notes__c/listViews/Manager_Approvers_Accounting_Notes.listView-meta.xml
<ListView>
    <fullName>Manager_Approvers_Accounting_Notes</fullName>
    <filterScope>Queue</filterScope>
    <label>Manager Approvers</label>
    <queue>Manager_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>