force-app/main/default/objects/Accounting_Notes__c/listViews/Test_Data.listView-meta.xml
<ListView>
    <fullName>Test_Data</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Attention_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>10/17/2020 12:00 AM</value>
    </filters>
    <label>Test Data</label>
</ListView>